--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'eclipse'
     id 'idea'
     id 'maven-publish'
     id 'net.minecraftforge.gradle' version '[6.0,6.2)'
+    id 'org.spongepowered.mixin' version '0.7.+'
 }
 
 jarJar.enable()
@@ -68,10 +68,45 @@ dependencies {
     jarJar(group: 'net.dv8tion', name: 'JDA', version: '[5.1,5.2)') {
         jarJar.pin(it, '5.1.2')
     }
-    minecraftLibrary('net.dv8tion:JDA:5.1.2')
+    jarJar(group: 'com.squareup.okhttp3', name: 'okhttp', version: '[4.11,4.12)') {
+        jarJar.pin(it, '4.12.0')
+    }
+    jarJar(group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '[1.8,1.9)') {
+        jarJar.pin(it, '1.9.0')
+    }
+    jarJar(group: 'com.squareup.okio', name: 'okio', version: '[3.5,3.9)') {
+        jarJar.pin(it, '3.9.1')
+    }
+    jarJar(group: 'com.neovisionaries', name: 'nv-websocket-client', version: '[2.13,2.14)') {
+        jarJar.pin(it, '2.14')
+    }
+    jarJar(group: 'net.sf.trove4j', name: 'trove4j', version: '[3.0.0,3.0.3)') {
+        jarJar.pin(it, '3.0.3')
+    }
+    jarJar(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '[2.14,2.15)') {
+        jarJar.pin(it, '2.15.2')
+    }
+    jarJar(group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '[2.14,2.15)') {
+        jarJar.pin(it, '2.15.2')
+    }
+    jarJar(group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '[2.14,2.15)') {
+        jarJar.pin(it, '2.15.2')
+    }
+    jarJar(group: 'org.apache.commons', name: 'commons-collections4', version: '[4.3,4.4)') {
+        jarJar.pin(it, '4.4')
+    }
+    minecraftLibrary 'net.dv8tion:JDA:5.1.2'
+    minecraftLibrary 'com.squareup.okhttp3:okhttp:4.12.0'
+    minecraftLibrary 'org.jetbrains.kotlin:kotlin-stdlib:1.9.0'
+    minecraftLibrary 'com.squareup.okio:okio:3.9.1'
+    minecraftLibrary 'com.neovisionaries:nv-websocket-client:2.14'
+    minecraftLibrary 'net.sf.trove4j:trove4j:3.0.3'
+    minecraftLibrary 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    minecraftLibrary 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    minecraftLibrary 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+    minecraftLibrary 'org.apache.commons:commons-collections4:4.4'
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
-
-
 
 tasks.named('processResources', ProcessResources).configure {
     var replaceProperties = [
@@ -86,6 +121,11 @@ tasks.named('processResources', ProcessResources).configure {
     filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
         expand replaceProperties + [project: project]
     }
+}
+
+mixin {
+    add sourceSets.main, "discord_chat_mod.refmap.json"
+    config "discord_chat_mod.mixins.json"
 }
 
 tasks.named('jar', Jar).configure {
